@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity>
+
+    <location>
+      <description type="X">X</description>
+    </location>
+
+  </iati-activity>
+</iati-activities>
